--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
     "rxjs": "~7.8.0",
+    "simplebar": "^6.3.2",
+    "simplebar-angular": "^3.3.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
